--- a/telephones/src/main/resources/templates/index.html
+++ b/telephones/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-        <table class="table table-borderless px-5 ">
+        <table class="table table-borderless ">
             <tbody>
             <tr>
                 <td>
@@ -22,15 +22,29 @@
             <tr><td>
                 <h3>Add New Client:</h3>
             </td></tr>
-            <tr class="row">
-                <td><h4>Name</h4></td>
-                <td><h4>Phone</h4></td>
-            </tr>
             <form action="#" th:action="@{/addUser}" th:object="${client}" method="POST">
                 <tr class="row">
-                    <td><input type="text" class="parameter-field" th:name="@{newClient.name}" th:field="*{name}" placeholder="John Smith" required></td>
-                    <td><input type="tel" class="parameter-field" th:name="@{newClient.phone}" th:field="*{phone}" placeholder="123-456-7890" required></td>
-                    <td><input type="submit" value="Add Client"/></td>
+                    <td>
+                        <div>
+                             <label for="name">Name</label>
+                             <input type="text" class="parameter-field" id="name" th:name="@{newClient.name}" th:field="*{name}" placeholder="John Smith" required>
+                        </div>
+                    </td>
+                    <td>
+                        <div>
+                            <label for="phone">Phone</label>
+                            <input type="tel" class="parameter-field" id="phone" th:name="@{newClient.phone}" th:field="*{phone}" placeholder="123-456-7890" required/>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding:0">
+                        <div>
+                            <input type="submit" value="Add Client" class="btn btn-dark btn-bg"/>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
                     <td th:if="${not #fields.hasErrors('name')}">
                         <div th:if="${not #fields.hasErrors('phone')}">
                             <p th:if="${#fields.hasGlobalErrors()}" th:errors="*{global}" class="alert alert-warning" role="alert"></p>
